added pangocairo-based text-rendering, added initial support for screen-DPI-query
(bzr r64.1.4)

--- a/configure.ac
+++ b/configure.ac
@@ -146,6 +146,8 @@ PKG_CHECK_MODULES(NUX,
                   glew
                   glewmx
                   sigc++-2.0
+                  pango
+                  pangocairo
                   )
 AC_SUBST(NUX_CFLAGS)
 AC_SUBST(NUX_LIBS)
