--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -19,6 +19,7 @@ AM_CPPFLAGS = \
   -DG_LOG_DOMAIN=\"NuxExamples\" \
   $(GCC_FLAGS) \
   $(NUX_CORE_CFLAGS) \
+  $(NUX_EXAMPLES_CFLAGS) \
   $(NUX_CFLAGS) \
   $(MAINTAINER_CFLAGS)
 
@@ -28,6 +29,7 @@ ALL_LIBS = \
   $(top_builddir)/NuxMesh/libnux-mesh-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
+  $(NUX_EXAMPLES_LIBS) \
   $(NUX_LIBS)
 
 # This is the individual executable build. For every $exe in noinst_PROGRAMS
