--- a/.bzrignore
+++ b/.bzrignore
@@ -21,25 +21,15 @@ stamp-h1
 depcomp
 *.deps
 *.libs
-NuxCore/libnux-core-1.0.la
 *.la
-NuxCore/nux-core-0.9.pc
-NuxCore/nux-core-1.0.pc
-NuxCore/nux-core.pc
+*.pc
 add_license.sh
-NuxImage/nux-image-0.9.pc
-NuxImage/nux-image.pc
-NuxMesh/nux-mesh-0.9.pc
-NuxMesh/nux-mesh.pc
-NuxGraphics/nux-graphics-0.9.pc
-Nux/nux-0.9.pc
-Nux/nux.pc
-NuxGraphics/nux-graphics.pc
 examples/Logs
+examples/button
 examples/combobox
+examples/cairo
+examples/checkbox
+examples/textedit
+examples/tooltip
 m4
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
+m4/*
