force building documentation at make dist
(bzr r96)

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,6 @@ endif
 
 CLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES =
-EXTRA_DIST = $(DX_CONFIG)
+EXTRA_DIST = autogen.sh $(DX_CONFIG) doc/html
 
 DISTCHECK_CONFIGURE_FLAGS = 
