Use DISTCHECK_CONFIGURE_FLAGS
(bzr r97)

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,4 +10,4 @@ CLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES =
 EXTRA_DIST = autogen.sh $(DX_CONFIG) doc/html
 
-DISTCHECK_CONFIGURE_FLAGS = 
+DISTCHECK_CONFIGURE_FLAGS = --enable-documentation
