--- a/NuxMesh/Makefile.am
+++ b/NuxMesh/Makefile.am
@@ -11,7 +11,7 @@ libnux_mesh_@NUX_API_VERSION@_la_CPPFLAGS= \
   -DPREFIX=\""$(prefix)"\" \
 	-DLIBDIR=\""$(libdir)"\" \
   -DDATADIR=\""$(datadir)"\" \
-  -DPKGDATADIR=\""$(pkgdatadir)"\" \
+  -DPKGDATADIR=\""$(pkgdatadir)/@NUX_API_VERSION@"\" \
   -DG_LOG_DOMAIN=\"NuxMesh\" \
   $(GCC_FLAGS) \
   $(NUX_MESH_CFLAGS) \
