--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,7 @@ if BUILD_DOCUMENTATION
 all: doxygen-doc
 endif
 
-CLEANFILES = $(DX_CLEANFILES)
 DISTCLEANFILES =
-EXTRA_DIST = autogen.sh $(DX_CONFIG) doc/html
+EXTRA_DIST = $(DX_CONFIG) doc/html
 
 DISTCHECK_CONFIGURE_FLAGS = --enable-documentation
