--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -123,8 +123,8 @@ source_cpp = \
   $(srcdir)/SpinBox_Logic.cpp \
   $(srcdir)/SplineCurveEditor.cpp \
   $(srcdir)/SplineCurvePreview.cpp \
-  $(srcdir)/WindowCompositor.cpp \
   $(srcdir)/StaticTextBox.cpp \
+  $(srcdir)/StaticCairoText.cpp \
   $(srcdir)/SystemThread.cpp \
   $(srcdir)/TableCtrl.cpp \
   $(srcdir)/TableItem.cpp \
@@ -149,6 +149,7 @@ source_cpp = \
   $(srcdir)/VToolBar.cpp \
   $(srcdir)/WidgetMetrics.cpp \
   $(srcdir)/WidgetSmartPointer.cpp \
+  $(srcdir)/WindowCompositor.cpp \
   $(srcdir)/WindowThread.cpp
 
 source_property_item_h = \
@@ -252,7 +253,7 @@ source_h = \
   $(srcdir)/SpinBox_Logic.h \
   $(srcdir)/SplineCurveEditor.h \
   $(srcdir)/SplineCurvePreview.h \
-  $(srcdir)/WindowCompositor.h \
+  $(srcdir)/StaticCairoText.h \
   $(srcdir)/StaticTextBox.h \
   $(srcdir)/SystemThread.h \
   $(srcdir)/TableCtrl.h \
@@ -263,8 +264,8 @@ source_h = \
   $(srcdir)/TimerProc.h \
   $(srcdir)/ToolButton.h \
   $(srcdir)/TreeControl.h \
-  $(srcdir)/Utils.h \
   $(srcdir)/Theme.h \
+  $(srcdir)/Utils.h \
   $(srcdir)/Validator.h \
   $(srcdir)/Valuator.h \
   $(srcdir)/ValuatorDouble.h \
@@ -278,6 +279,7 @@ source_h = \
   $(srcdir)/VToolBar.h \
   $(srcdir)/WidgetMetrics.h \
   $(srcdir)/WidgetSmartPointer.h \
+  $(srcdir)/WindowCompositor.h \
   $(srcdir)/WindowThread.h
 
 libnux_@NUX_API_VERSION@_la_SOURCES = \
