--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,1 +1,51 @@
-check_PROGRAMS =
+check_PROGRAMS = \
+  test-nux
+  
+# Please keep alphabetical
+test_nux_SOURCES = \
+  test-nux.cpp \
+  test-timeline.cpp
+  
+test_nux_CPPFLAGS = \
+  -I$(srcdir) \
+  -I$(top_srcdir) \
+  -DPREFIX=\""$(prefix)"\" \
+	-DLIBDIR=\""$(libdir)"\" \
+  -DDATADIR=\""$(datadir)"\" \
+  -DG_LOG_DOMAIN=\"NuxTests\" \
+  -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GCC_FLAGS) \
+  $(NUX_CORE_CFLAGS) \
+  $(NUX_EXAMPLES_CFLAGS) \
+  $(NUX_CFLAGS) \
+  $(MAINTAINER_CFLAGS)
+  
+test_nux_LDADD = \
+  $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxMesh/libnux-mesh-@NUX_API_VERSION@.la \
+  $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
+  $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
+  $(NUX_LIBS)
+  
+#run make test as part of make check
+check-local: test
+test:
+	@gtester -k -o=test-nux-results.xml ./test-nux
+
+.PHONY: check-report full-report
+check-report:
+	@gtester -k -o=test-nux-results.xml -k ./test-nux \
+		&& ( gtester-report test-nux-results.xml \
+				| sed 's/GTester Unit Test Report</>GTester Unit Test Report (normal)</' \
+				> test-nux-results.html ) \
+		&& gnome-open ./test-nux-results.html
+
+full-report:
+		@gtester -k -o=test-nux-results.xml -k -m=slow ./test-nux \
+	  && ( gtester-report test-nux-results.xml \
+	      | sed 's/>GTester Unit Test Report</>GTester Unit Test Report (normal)</' \
+	      > test-nux-results.html )
+	      
+clean-generic:
+	rm -f test-nux-results.xml test-nux-results.html
