* Adding gpu tests
(bzr r135.2.1)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests
+SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests gputests
 
 include doxygen-include.am
 
