move the support test to tools/ and install in libexec
(bzr r151)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests
+SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples tests tools
 
 include doxygen-include.am
 
