Fixed line endings
(bzr r152.1.4)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,7 +4,8 @@ check_PROGRAMS = \
 # Please keep alphabetical
 test_nux_SOURCES = \
   test-nux.cpp \
-  test-timeline.cpp
+  test-timeline.cpp \
+  test-object.cpp
   
 test_nux_CPPFLAGS = \
   -I$(srcdir) \
