* Added gpu test: quad_2texmod.cpp
(bzr r158)

--- a/gputests/Makefile.am
+++ b/gputests/Makefile.am
@@ -6,7 +6,7 @@ if BUILD_GPUTESTS
 
 # This tells automake that we want to build binaries, but they shouldn't be
 # installed. For each individual test, add it's binary name here
-noinst_PROGRAMS = texture_power_of_2 framebufferobject
+noinst_PROGRAMS = texture_power_of_2 framebufferobject quad_2texmod
 
 # We only have to do this AM_ once to affect all the binaries we build from
 # this Makefile
@@ -38,11 +38,14 @@ texture_power_of_2_SOURCES = texture_power_of_2.cpp
 texture_power_of_2_LDADD = $(ALL_LIBS)
 framebufferobject_SOURCES = framebufferobject.cpp
 framebufferobject_LDADD = $(ALL_LIBS)
+quad_2texmod_SOURCES = quad_2texmod.cpp
+quad_2texmod_LDADD = $(ALL_LIBS)
 
 # distribute source along to the documentation
 sourcegputestsdir = "$(pkgdatadir)/gputests"
 sourcegputests_DATA = $(texture_power_of_2_SOURCES) \
-                      $(framebufferobject_SOURCES)
+                      $(framebufferobject_SOURCES) \
+                      $(quad_2texmod)
 
 endif
 
