Fix: window visibility
(bzr r157.2.2)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,8 @@ check_PROGRAMS = \
 test_nux_SOURCES = \
   test-nux.cpp \
   test-timeline.cpp \
-  test-object.cpp
+  test-object.cpp \
+  test-system.cpp
   
 test_nux_CPPFLAGS = \
   -I$(srcdir) \
