--- a/NuxCore/nux-core.pc.in
+++ b/NuxCore/nux-core.pc.in
@@ -8,4 +8,4 @@ Description: Core objects and utilities for Nux
 Version: @VERSION@
 Libs: -L${libdir} -lnux-core-@NUX_API_VERSION@
 Cflags: -I${includedir}/Nux-@NUX_API_VERSION@
-Requires: glib-2.0
+Requires: glib-2.0 sigc++-2.0
