--- a/.bzrignore
+++ b/.bzrignore
@@ -35,3 +35,12 @@ m4
 m4/*
 examples/timeline
 tools/unity_support_test
+examples/gridlayout
+examples/pangotextedit
+examples/timegraph
+gputests/framebufferobject
+gputests/quad_2texmod
+gputests/texture_blur
+gputests/texture_copy_blur
+gputests/texture_data
+gputests/texture_power_of_2
