--- a/.bzrignore
+++ b/.bzrignore
@@ -44,3 +44,5 @@ gputests/texture_blur
 gputests/texture_copy_blur
 gputests/texture_data
 gputests/texture_power_of_2
+tests/test-nux
+tests/test-nux-results.xml
