--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,7 +6,7 @@ if BUILD_EXAMPLES
 
 # This tells automake that we want to build binaries, but they shouldn't be
 # installed. For each individual example, add it's binary name here
-noinst_PROGRAMS = combobox cairo textedit button checkbox tooltip timeline timegraph gridlayout pangotextedit
+noinst_PROGRAMS = combobox cairo textedit button checkbox tooltip timeline timegraph gridlayout pangotextedit layeredlayout
 
 # We only have to do this AM_ once to affect all the binaries we build from
 # this Makefile
@@ -54,6 +54,8 @@ gridlayout_SOURCES = gridlayout.cpp
 gridlayout_LDADD = $(ALL_LIBS)
 pangotextedit_SOURCES = pangotextedit.cpp
 pangotextedit_LDADD = $(ALL_LIBS)
+layeredlayout_SOURCES = layeredlayout.cpp
+layeredlayout_LDADD = $(ALL_LIBS)
 
 # distribute source along to the documentation
 sourceexampledir = "$(pkgdatadir)/examples"
