don't build win things in Linux, just dist them
(bzr r208)

--- a/NuxGraphics/Makefile.am
+++ b/NuxGraphics/Makefile.am
@@ -1,6 +1,7 @@
 CLEANFILES = 
 DISTCLEANFILES =
-EXTRA_DIST =
+EXTRA_DIST = $(srcdir)/GraphicsDisplayWin.cpp \
+             $(srcdir)/GraphicsDisplayWin.h
 
 lib_LTLIBRARIES = \
   libnux-graphics-@NUX_API_VERSION@.la
@@ -31,7 +32,6 @@ source_h = \
   $(srcdir)/FontTexture.h \
   $(srcdir)/FontRenderer.h \
   $(srcdir)/GraphicsDisplayX11.h \
-  $(srcdir)/GraphicsDisplayWin.h \
   $(srcdir)/Gfx_Interface.h \
   $(srcdir)/GpuDevice.h \
   $(srcdir)/GLDeviceFrameBufferObject.h \
@@ -105,7 +105,6 @@ source_cpp = \
   $(srcdir)/GLTextureResourceManager.cpp \
   $(srcdir)/GLTextureStates.cpp \
   $(srcdir)/GraphicsDisplayX11.cpp \
-  $(srcdir)/GraphicsDisplayWin.cpp \
   $(srcdir)/GLSh_ColorPicker.cpp \
   $(srcdir)/GLSh_DrawFunction.cpp \
   $(srcdir)/GLSh_Fill.cpp \
