[release] 0.9.26 - no NuxMesh building
(bzr r226)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = data NuxCore NuxImage NuxMesh NuxGraphics Nux examples gputests tests tools
+SUBDIRS = data NuxCore NuxImage NuxGraphics Nux examples gputests tests tools
 
 include doxygen-include.am
 
