--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -14,6 +14,7 @@ noinst_PROGRAMS = button \
                   gridlayout \
                   layeredlayout \
                   moveable_view \
+                  pango_combobox \
                   pangotextedit \
                   scrollview \
                   textedit \
@@ -73,6 +74,9 @@ layeredlayout_SOURCES = layeredlayout.cpp
 layeredlayout_LDADD = $(ALL_LIBS)
 scrollview_SOURCES = scrollview.cpp
 scrollview_LDADD = $(ALL_LIBS)
+pango_combobox_SOURCES = pango_combobox.cpp
+pango_combobox_LDADD = $(ALL_LIBS)
+
 
 # distribute source along to the documentation
 #sourceexampledir = "$(pkgdatadir)/examples"
