--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,31 +2,7 @@ CLEANFILES =
 DISTCLEANFILES =
 EXTRA_DIST =
 
-AM_CPPFLAGS = \
-  -I$(srcdir) \
-  -I$(top_srcdir) \
-  -DPREFIX=\""$(prefix)"\" \
-  -DLIBDIR=\""$(libdir)"\" \
-  -DDATADIR=\""$(datadir)"\" \
-  -DG_LOG_DOMAIN=\"NuxTools\" \
-  $(GCC_FLAGS) \
-  $(NUX_CORE_CFLAGS) \
-  $(NUX_EXAMPLES_CFLAGS) \
-  $(NUX_CFLAGS) \
-  $(MAINTAINER_CFLAGS)
+libexec_PROGRAMS = unity_support_test
 
-ALL_LIBS = \
-  $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
-  $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
-  $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
-  $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
-  $(NUX_EXAMPLES_LIBS) \
-  $(NUX_LIBS)
-
-libexec_PROGRAMS =     \
-  unity_support_test   \
-  $(NULL)
-
-unity_support_test_SOURCES =  unity_support_test.cpp
-unity_support_test_LDADD = $(ALL_LIBS)
-
+unity_support_test_CFLAGS = $(UNITY_SUPPORT_TEST_CFLAGS)
+unity_support_test_LDFLAGS = $(UNITY_SUPPORT_TEST_LIBS)
