--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                libpango1.0-dev,
                libx11-dev,
                libpcre3-dev,
+               libpci-dev,
 Standards-Version: 3.9.1
 Section: libs
 Homepage: http://launchpad.net/nux
