Replace Point with template specialisation of Point2D<int>.
(bzr r344.2.3)

--- a/.bzrignore
+++ b/.bzrignore
@@ -31,6 +31,8 @@ examples/cairo
 examples/checkbox
 examples/textedit
 examples/tooltip
+examples/focus
+examples/moveable_view
 m4
 m4/*
 examples/timeline
