--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,13 +1,14 @@
 check_PROGRAMS = \
-  test-nux
-  
+  test-nux \
+  gtest-nux-core
+
 # Please keep alphabetical
 test_nux_SOURCES = \
   test-nux.cpp \
   test-timeline.cpp \
   test-object.cpp \
   test-system.cpp
-  
+
 test_nux_CPPFLAGS = \
   -I$(srcdir) \
   -I$(top_srcdir) \
@@ -21,20 +22,47 @@ test_nux_CPPFLAGS = \
   $(NUX_EXAMPLES_CFLAGS) \
   $(NUX_CFLAGS) \
   $(MAINTAINER_CFLAGS)
-  
+
 test_nux_LDADD = \
   $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS)
-  
+
+gtest_nux_core_SOURCES = \
+  test_properties.cpp
+
+gtest_nux_core_CPPFLAGS = \
+  -I$(srcdir) \
+  -I$(top_srcdir) \
+  -DPREFIX=\""$(prefix)"\" \
+	-DLIBDIR=\""$(libdir)"\" \
+  -DDATADIR=\""$(datadir)"\" \
+  -DG_LOG_DOMAIN=\"NuxTests\" \
+  -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GCC_FLAGS) \
+  $(NUX_CORE_CFLAGS) \
+  $(NUX_EXAMPLES_CFLAGS) \
+  $(NUX_CFLAGS) \
+  $(MAINTAINER_CFLAGS)
+
+gtest_nux_core_LDADD = \
+  $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
+  $(NUX_LIBS)
+
+gtest_nux_core_LDFLAGS = \
+  -lpthread -lgtest
+
+
 #run make test as part of make check
-check-local: test
+check-local: test gtest
 test:
 	@gtester --verbose -k -o=test-nux-results.xml ./test-nux
 
-.PHONY: check-report full-report
+gtest: gtest-nux-core
+	./gtest-nux-core
+
 check-report:
 	@gtester -k -o=test-nux-results.xml -k ./test-nux \
 		&& ( gtester-report test-nux-results.xml \
@@ -47,6 +75,8 @@ full-report:
 	  && ( gtester-report test-nux-results.xml \
 	      | sed 's/>GTester Unit Test Report</>GTester Unit Test Report (normal)</' \
 	      > test-nux-results.html )
-	      
+
 clean-generic:
 	rm -f test-nux-results.xml test-nux-results.html
+
+.PHONY: check-report full-report gtest test
