Use the gtest_main lib to avoid writing our own main method.
(bzr r345.1.10)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -52,7 +52,7 @@ gtest_nux_core_LDADD = \
   $(NUX_LIBS)
 
 gtest_nux_core_LDFLAGS = \
-  -lpthread -lgtest
+  -lpthread -lgtest -lgtest_main
 
 
 #run make test as part of make check
