Add XComposite checks to unity_support_test
(bzr r346)

--- a/configure.ac
+++ b/configure.ac
@@ -163,6 +163,8 @@ AC_SUBST(NUX_LIBS)
 
 PKG_CHECK_MODULES(UNITY_SUPPORT_TEST,
                   x11
+		  xcomposite
+		  xdamage
                   gl
                   libpci
                   )
