--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = data NuxCore NuxImage NuxGraphics Nux examples gputests tests tools
 
+CXXFLAGS += -fno-permissive -fno-strict-enums
+
 include doxygen-include.am
 
 if BUILD_DOCUMENTATION
