* debian/patches/01_build_with_gcc46.patch:   - Fix Fails to compile with GCC 4.6 (thanks Adam Williamson) (LP: #745392) * debian/control, rules, patches/series:   - add quilt infrastructure
Fixes LP: #745392

(bzr r159.1.76)

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Priority: optional
 Maintainer: Didier Roche <didrocks@ubuntu.com>
 Build-Depends: debhelper (>= 7.0.50~),
                autotools-dev,
+               quilt,
                doxygen,
                libglib2.0-dev (>= 2.25.14),
                libgdk-pixbuf2.0-dev,
