--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@
+	dh $@ --with quilt
 
 # build documentation as I didn't find a proper way to avoid make clean to not
 # remove doc/
