Build system fixes to allow building against GLES2.0. Nux (in non-debug mode) now compiles successfully with GLES2.0, but of course doesn't work.
(bzr r344.12.5)

--- a/configure.ac
+++ b/configure.ac
@@ -109,6 +109,26 @@ AC_CHECK_FUNCS([memset munmap strcasecmp strdup])
 PKG_PROG_PKG_CONFIG
 
 dnl ===========================================================================
+GL_PKGS="gl glew glewmx"
+MAINTAINER_CFLAGS=""
+
+# Enable opengl es 20 code path
+AC_ARG_ENABLE([opengles_20],
+              [AC_HELP_STRING([--enable-opengles-20=@<:@no/yes@:>@],
+              [Enable OpenGL ES 20 code path @<:@default=no@:>@])],
+              [],
+              [enable_opengles_20=no])
+AS_IF([test "x$enable_opengles_20" = "xyes"],
+      [
+         MAINTAINER_CFLAGS+=" -DNUX_OPENGLES_20"
+         GL_PKGS="egl glesv2"
+      ]
+)
+AM_CONDITIONAL(NUX_OPENGLES_20, [test "x$enable_opengles_20" = "xyes"])
+
+AC_SUBST(MAINTAINER_CFLAGS)
+
+dnl ===========================================================================
 
 PKG_CHECK_MODULES(NUX_CORE, glib-2.0 >= 2.25.14 gthread-2.0 sigc++-2.0)
 AC_SUBST(NUX_CORE_CFLAGS)
@@ -127,8 +147,7 @@ AC_SUBST(NUX_IMAGE_LIBS)
 PKG_CHECK_MODULES(NUX_MESH,
                   glib-2.0 >= 2.25.14
                   gdk-pixbuf-2.0
-                  glew
-                  glewmx
+                  $GL_PKGS
                   sigc++-2.0
                   )
 AC_SUBST(NUX_MESH_CFLAGS)
@@ -137,9 +156,7 @@ AC_SUBST(NUX_MESH_LIBS)
 PKG_CHECK_MODULES(NUX_GRAPHICS,
                   glib-2.0 >= 2.25.14
                   gdk-pixbuf-2.0
-                  gl
-                  glew
-                  glewmx
+                  $GL_PKGS
                   xxf86vm
                   sigc++-2.0
                   )
@@ -150,9 +167,7 @@ PKG_CHECK_MODULES(NUX,
                   glib-2.0 >= 2.25.14
                   gdk-pixbuf-2.0
                   gthread-2.0
-                  gl
-                  glew
-                  glewmx
+                  $GL_PKGS
                   sigc++-2.0
                   pango
                   pangocairo
@@ -163,7 +178,7 @@ AC_SUBST(NUX_LIBS)
 
 PKG_CHECK_MODULES(UNITY_SUPPORT_TEST,
                   x11
-                  gl
+                  $GL_PKGS
                   libpci
                   )
 AC_SUBST(UNITY_SUPPORT_TEST_CFLAGS)
@@ -206,7 +221,6 @@ AC_ARG_ENABLE([maintainer-mode],
               [],
               [enable_maintainer_mode=maintainer_mode_default])
 
-MAINTAINER_CFLAGS=""
 AS_IF([test "x$enable_maintainer_mode" = "xyes" && test "x$GCC" = "xyes"],
       [
          MAINTAINER_CFLAGS+="-Werror -Wall -Wcast-align -Wno-uninitialized -Wempty-body -Wformat-security -Winit-self"
@@ -227,20 +241,6 @@ AS_IF([test "x$enable_debug" = "xyes"],
 
 AC_SUBST(MAINTAINER_CFLAGS)
 
-# Enable opengl es 20 code path
-AC_ARG_ENABLE([opengles_20],
-              [AC_HELP_STRING([--enable-opengles-20=@<:@no/yes@:>@],
-              [Enable OpenGL ES 20 code path @<:@default=no@:>@])],
-              [],
-              [enable_opengles_20=no])
-AS_IF([test "x$enable_opengles_20" = "xyes"],
-      [
-         MAINTAINER_CFLAGS+=" -DNUX_OPENGLES_20"
-      ]
-)
-AM_CONDITIONAL(NUX_OPENGLES_20, [test "x$enable_opengles_20" = "xyes"])
-
-AC_SUBST(MAINTAINER_CFLAGS)
 
 # this enables lots of useful debugging output in Nux
 AC_ARG_ENABLE([examples],
