--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,7 +2,9 @@ CLEANFILES =
 DISTCLEANFILES =
 EXTRA_DIST =
 
+if !NUX_OPENGLES_20
 libexec_PROGRAMS = unity_support_test
+endif
 
 unity_support_test_CFLAGS = $(UNITY_SUPPORT_TEST_CFLAGS)
 unity_support_test_LDFLAGS = $(UNITY_SUPPORT_TEST_LIBS)
