--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = data NuxCore NuxImage NuxGraphics Nux examples gputests tests tools
 
-CXXFLAGS += -fno-permissive -fno-strict-enums
+CXXFLAGS += -fno-permissive
 
 include doxygen-include.am
 
