Initial test passes.
(bzr r356.3.2)

--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -50,6 +50,7 @@ source_cpp = \
   $(srcdir)/Parsing.cpp \
   $(srcdir)/CPU.cpp \
   $(srcdir)/Error.cpp \
+  $(srcdir)/Logger.cpp \
   $(srcdir)/NUniqueIndex.cpp \
   $(srcdir)/GlobalInitializer.cpp \
   $(srcdir)/ObjectType.cpp \
@@ -140,6 +141,7 @@ source_h = \
   $(srcdir)/Inalogic.h \
   $(srcdir)/Color.h \
   $(srcdir)/Colors.h \
+  $(srcdir)/Logger.h \
   $(srcdir)/Memory.h \
   $(srcdir)/Error.h \
   $(srcdir)/SystemGNU.h \
