--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -31,6 +31,7 @@ test_nux_LDADD = \
   $(NUX_LIBS)
 
 gtest_nux_core_SOURCES = \
+  test_logger.cpp \
   test_properties.cpp
 
 gtest_nux_core_CPPFLAGS = \
