--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -115,9 +115,6 @@ source_cpp = \
   $(srcdir)/Panel.cpp \
   $(srcdir)/PopUpWindow.cpp \
   $(srcdir)/PropertyList.cpp \
-  $(srcdir)/PushButton.cpp \
-  $(srcdir)/RadioButton.cpp \
-  $(srcdir)/RadioButtonGroup.cpp \
   $(srcdir)/RangeValue.cpp \
   $(srcdir)/RangeValueInteger.cpp \
   $(srcdir)/RGBValuator.cpp \
@@ -140,6 +137,7 @@ source_cpp = \
   $(srcdir)/Timeline.cpp \
   $(srcdir)/TimelineEasings.cpp \
   $(srcdir)/TimerProc.cpp \
+  $(srcdir)/ToggleButton.cpp \
   $(srcdir)/ToolButton.cpp \
   $(srcdir)/TreeControl.cpp \
   $(srcdir)/Utils.cpp \
@@ -251,9 +249,6 @@ source_h = \
   $(srcdir)/Panel.h \
   $(srcdir)/PopUpWindow.h \
   $(srcdir)/PropertyList.h \
-  $(srcdir)/PushButton.h \
-  $(srcdir)/RadioButton.h \
-  $(srcdir)/RadioButtonGroup.h \
   $(srcdir)/RangeValue.h \
   $(srcdir)/RangeValueInteger.h \
   $(srcdir)/Readme.txt \
@@ -278,6 +273,7 @@ source_h = \
   $(srcdir)/TimelineEasings.h \
   $(srcdir)/TimerProc.h \
   $(srcdir)/ToolButton.h \
+  $(srcdir)/ToggleButton.h \
   $(srcdir)/TreeControl.h \
   $(srcdir)/Theme.h \
   $(srcdir)/Utils.h \
