Adding the initial logging::Writer class.
(bzr r356.3.11)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -53,7 +53,7 @@ gtest_nux_core_LDADD = \
   $(NUX_LIBS)
 
 gtest_nux_core_LDFLAGS = \
-  -lpthread -lgtest -lgtest_main
+  -lpthread -lgtest -lgtest_main -lgmock
 
 
 #run make test as part of make check
