--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -51,6 +51,7 @@ source_cpp = \
   $(srcdir)/CPU.cpp \
   $(srcdir)/Error.cpp \
   $(srcdir)/Logger.cpp \
+  $(srcdir)/LoggingWriter.cpp \
   $(srcdir)/NUniqueIndex.cpp \
   $(srcdir)/GlobalInitializer.cpp \
   $(srcdir)/ObjectType.cpp \
@@ -142,6 +143,7 @@ source_h = \
   $(srcdir)/Color.h \
   $(srcdir)/Colors.h \
   $(srcdir)/Logger.h \
+  $(srcdir)/LoggingWriter.h \
   $(srcdir)/Memory.h \
   $(srcdir)/Error.h \
   $(srcdir)/SystemGNU.h \
